Always show scrollbars, even on short pages. Fixes #38

--- a/sass/_normalize.scss
+++ b/sass/_normalize.scss
@@ -2,6 +2,7 @@ html {
 	font-family: sans-serif;
 	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust:     100%;
+	overflow: scroll;
 }
 
 body {
